making header and footer

--- a/my-app/src/layouts/default.scss
+++ b/my-app/src/layouts/default.scss
@@ -5,6 +5,8 @@
   display: flex;
   flex-flow: column nowrap;
   gap: 8rem;
+  width: 1440px;
+  margin: 0 auto;
 
   @include mx.media(tablet-up) {
     gap: 14rem;
