--- a/my-app/src/styles/global.scss
+++ b/my-app/src/styles/global.scss
@@ -63,7 +63,7 @@ html {
 
 body {
   font-family: var(--fontPoppins);
-  font-size: 1.4rem;
+  font-size: var(--font-size-md);
   overflow-x: hidden;
   background-color: var(--basic);
 
