--- a/my-app/src/sections/footer/footer.scss
+++ b/my-app/src/sections/footer/footer.scss
@@ -1,31 +1,20 @@
-body {
-  position: relative;
-}
-
 .footer-wrapper {
-  position: absolute;
-  bottom: 0;
-  background-color: rgb(198, 246, 108);
-  min-width: 100vw;
+  background-color: black;
+  color: #fff;
+  padding: 2rem;
 }
 
-  .nav-wrapper {
+  .nav {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    gap: 2rem;
     margin: 0 auto;
-  }
-
-    .nav {
-      margin: 0 auto;
-      padding: .5rem 0;
-      width: max-content;
-      display: flex;
-      flex-wrap: wrap;
-      flex-direction: row;
-      gap: 2rem;
-      text-decoration: none;
-      list-style: none;
+    width: max-content;
+    text-decoration: none;
+    list-style: none;
     }
 
       .nav-item {
-        color: rgb(81, 220, 192);
-        font-size: 1.5rem;
+        font-size: 21px;
       }
