--- a/my-app/src/sections/header/header.scss
+++ b/my-app/src/sections/header/header.scss
@@ -1,17 +1,34 @@
-body {
-  margin: 0;
-  padding: 0;
-}
-
 .header-wrapper {
-  background-color: rgb(198, 246, 108);
-  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  height: 7rem;
+  width: 100%;
+  background-color: black;
+  color: #fff;
+  padding: 2rem;
 }
 
-h1 {
-  padding: .5rem 0;
-  margin: 0;
-  font-size: 3rem;
-  color: rgb(81, 220, 192);
-  text-align: center;
+.title-wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 1rem;
 }
+h1 {
+  font-size: var(--font-size-3xl);
+
+}
+
+.menu-items {
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
+}
+
+.text {
+  color: #fff;
+}
+
+ 
