--- a/my-app/src/styles/variables.scss
+++ b/my-app/src/styles/variables.scss
@@ -2,12 +2,18 @@
   --basic: #f8f8f8;
   --white: #ffffff;
   --black: #000000;
-  --primary: #4E4E4E; 
-  --secondary: #43BCCD; 
+  --primary: #00acac; 
+  --secondary: #ed403c; 
   --accent:#EA3546; 
   --grey:#8D8D8D;
   --lightGrey:#D9D9D9;
-  --fontPoppins:'Poppins', sans-serif;
-  --fontDongle: 'Dongle', sans-serif;
-  --fontRajdhani:'Rajdhani', sans-serif;
+
+  /* Font sizes. */
+  --font-size-sm: 1.6rem;
+  --font-size-md: 1.8rem;
+  --font-size-lg: 2.4rem;
+  --font-size-xl: 3rem;
+  --font-size-2xl: 3.6rem;
+  --font-size-3xl: 4.8rem;
+  --font-size-4xl: 7.2rem;
 }
