--- a/my-app/src/sections/header/header.scss
+++ b/my-app/src/sections/header/header.scss
@@ -21,10 +21,61 @@ h1 {
 
 }
 
+.menu {
+  display: flex;
+  flex-direction: row;
+  gap: 4rem;
+}
+
 .menu-items {
   display: flex;
   flex-direction: row;
-  gap: 2rem;
+  align-items: center;
+  gap: 3rem;
+}
+
+.link {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+}
+
+.icon {
+  width: 20px;
+  height: auto;
+}
+
+#uparrow:before {
+  content: '\276F';
+}
+
+#downarrow:before {
+  content: '\276E';
+}
+
+#uparrow, #downarrow {
+  font-size: 15px;
+  align-self: flex-start;
+  color: #fff;
+  display: inline-block;
+  -ms-transform: rotate(90deg);
+  -webkit-transform: rotate(90deg);
+  transform: rotate(90deg);
+}
+
+.search-input {
+  font-size: 17px;
+  color: transparent;
+  border-radius: 80px;
+  height: 100%;
+  height: 33px;
+  width: 33px;
+  background-color: #fff;
+  background-image: url('./graphics/png/search.png');
+  background-repeat: no-repeat;
+  background-size: 16px;
+  background-position: 50%;
+  outline: none;
 }
 
 .text {
