--- a/my-app/src/sections/hero/hero.scss
+++ b/my-app/src/sections/hero/hero.scss
@@ -1,3 +1,17 @@
+body {
+  color: #fff;
+}
+
+picture {
+  border-radius: 15px;
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 .section-wrapper {
   max-width: 120rem;
   width: 100%;
@@ -7,4 +21,94 @@
   align-self: center;
 }
 
+.games-container {
+  margin: -1.5rem;
+  display: flex;
+  position: relative;
+  justify-content: center;
+  flex-wrap: wrap;
+  box-sizing: border-box;
+}
 
+.game {
+  margin: 15px;
+  width: calc(33.33333% - 30px);
+  z-index: 1;
+  min-width: 0;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+
+.game-cover {
+  padding-top: 57.4%;
+  transition: .3s;
+  display: flex;
+  position: relative;
+}
+
+.discount {
+  font-weight: 700;
+  background-color: rgb(175, 19, 19);
+  position: absolute;
+  border-radius: 8px 8px 0;
+  padding: 6px 6px 5px 7px;
+  z-index: 2;
+  border: -0.2rem;
+  left: -0.3rem;
+  bottom: -0.2rem;
+  transition: 2s;
+}
+
+.discount::after {
+  transform: skewX(16deg);
+  width: 100%;
+  border-radius: 10px 5px;
+  content: "";
+  position: absolute;
+  background-color: rgb(175, 19, 19);
+  top: 0;
+  bottom: 0;
+  right: -0.4rem;
+  z-index: -1;
+}
+
+.game-img {
+  position: absolute;
+}
+
+.information {
+  margin-top: 1rem;
+  display: flex;
+  flex-direction: row;
+  position: relative;
+  z-index: 1;
+  min-height: 2.6rem;
+  height: 100%;
+}
+
+.text {
+  display: inline-flex;
+  min-width: 0;
+  flex-direction: column;
+  margin-top: 0.4rem;
+}
+
+.name {
+  font-size: 1.5rem;
+  margin-right: 1rem;
+  display: inline-flex;
+  align-items: center;
+  min-width: 0;
+}
+
+.title {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.price {
+  margin-left: auto;
+  font-size: 2.3rem;
+}
