--- a/my-app/src/sections/footer/footer.scss
+++ b/my-app/src/sections/footer/footer.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Sawarabi+Mincho&display=swap');
+
 .footer-wrapper {
   display: flex;
   flex-direction: column;
@@ -20,21 +22,27 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 30px;
-  padding-bottom: 30px;
   border-bottom: 1px solid rgb(46, 43, 43);
 }
 
-.logo-list {
+.logo-wrapper {
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  gap: 2rem;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 3rem;
 }
 
 .logo-br {
   font-size: 3.5rem;
   color: #fff;
   text-decoration: none;
+}
+
+.list-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-bottom: 3rem;
 }
 
 .list {
@@ -54,10 +62,13 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding-bottom: 30px;
 }
 
 .icons {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 1rem;
   margin: -0.7rem;
   justify-content: flex-end;
 }
@@ -69,7 +80,6 @@
 .socials {
   transition: .1s;
   margin: 0.7rem;
-  flex-shrink: 0;
   padding: 1rem;  
 }
 
@@ -154,4 +164,51 @@
   mask-size: contain;
   mask-position: center;
   background-color: #fdfdfd;
+}
+
+.footer-hero-wrapper {
+  background-image: url(./src/ghost-of-tushima-hero.png);
+  background-size: cover;
+  height: 23.8rem;
+  width: 50rem;
+  position: relative;
+}
+
+.hero-heading {
+  position: absolute;
+  padding: 3rem 0 0 4rem;
+  font-size: 3rem;
+  font-family: 'Sawarabi Mincho', serif;
+}
+
+.information-copyright {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 15px;
+  font-family: arial,sans-serif;
+}
+
+.lng-currency {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.location-icon {
+  margin-right: 1rem;
+  mask-image: url(./src/icon-location.png);
+  mask-repeat: no-repeat;
+  mask-size: contain;
+  mask-position: center;
+  background-color: #fff;
+  width: 2rem;
+  height: 2rem;
+  flex: 0 0 2rem;
+}
+
+.language {
+  margin-right: 1rem;
+  padding-right: 1rem;
+  border-right: 1px solid rgb(46, 43, 43);
 }
