--- a/my-app/src/sections/footer/footer.scss
+++ b/my-app/src/sections/footer/footer.scss
@@ -1,3 +1,4 @@
+@use "src/styles/mixins" as mx;
 @import url('https://fonts.googleapis.com/css2?family=Sawarabi+Mincho&display=swap');
 
 .footer-wrapper {
@@ -7,7 +8,11 @@
   width: 100%;
   background-color: black;
   color: #fff;
-  padding: 3rem;
+  padding: 1rem 0 2rem 0;
+
+  @include mx.media(mobile) {
+    padding: 1rem 1.5rem;
+  }
 }
 
 .footer-content {
@@ -21,15 +26,24 @@
 .links {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 30px;
+  margin-bottom: 3rem;
   border-bottom: 1px solid rgb(46, 43, 43);
+
+  @include mx.media(mobile) {
+    flex-direction: column;
+    margin-bottom: 1rem;
+  }
 }
 
 .logo-wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-bottom: 3rem;
+  padding-bottom: 1rem;
+
+  @include mx.media(mobile) {
+    display: none;
+  }
 }
 
 .logo-br {
@@ -42,19 +56,32 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding-bottom: 3rem;
+  padding-bottom: 1rem;
+
+  @include mx.media(mobile) {
+    padding-bottom: 0;
+  }
 }
 
 .list {
   display: flex;
   justify-content: space-between;
   flex-direction: column;
+
+  @include mx.media(mobile) {
+    align-items: center;
+  }
 }
 
 .sublinks {
   padding: 1rem 1rem 1rem 0rem;
   display: flex;
   align-items: center;
+
+  @include mx.media(mobile) {
+    padding: .5rem;
+    font-size: 1.5rem;
+  }
 }
 
 .media {
@@ -62,7 +89,11 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding-bottom: 30px;
+  padding-bottom: 1rem;
+
+  @include mx.media(mobile) {
+    padding-bottom: 0;
+  }
 }
 
 .icons {
@@ -71,6 +102,12 @@
   grid-gap: 1rem;
   margin: -0.7rem;
   justify-content: flex-end;
+
+  @include mx.media(mobile) {
+    transform: scale(.7);
+    grid-gap: .5rem;
+    grid-template-columns: repeat(6, 1fr);
+  }
 }
 
 .icons a:hover {
@@ -172,6 +209,13 @@
   height: 23.8rem;
   width: 50rem;
   position: relative;
+
+  @include mx.media(mobile) {
+    width: auto;
+    height: 15rem;
+    background-position-x: 5rem;
+    background-repeat: no-repeat;
+  }
 }
 
 .hero-heading {
@@ -179,14 +223,28 @@
   padding: 3rem 0 0 4rem;
   font-size: 3rem;
   font-family: 'Sawarabi Mincho', serif;
+
+  @include mx.media(mobile) {
+    font-size: 2.5rem;
+  }
 }
 
 .information-copyright {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-size: 15px;
+  font-size: 1.5rem;
   font-family: arial,sans-serif;
+
+  @include mx.media(mobile) {
+    justify-content: center;
+  }
+}
+
+.copyright {
+  @include mx.media(mobile) {
+    display: none;
+  }
 }
 
 .lng-currency {
