--- a/my-app/src/sections/hero/hero.scss
+++ b/my-app/src/sections/hero/hero.scss
@@ -1,3 +1,5 @@
+@use "src/styles/mixins" as mx;
+
 body {
   color: #fff;
 }
@@ -19,6 +21,14 @@ picture {
   display: flex;
   flex-direction: column;
   align-self: center;
+
+  @include mx.media(mobile) {
+    margin: 2rem 0;
+
+    h2 {
+      text-align: center;
+    }
+  }
 }
 
 .games-container {
@@ -28,16 +38,27 @@ picture {
   justify-content: center;
   flex-wrap: wrap;
   box-sizing: border-box;
+
+  @include mx.media(mobile) {
+    flex-direction: column;
+    align-items: center;
+    margin: 0;
+    padding: -1.5rem;
+  }
 }
 
 .game {
-  margin: 15px;
-  width: calc(33.33333% - 30px);
+  margin: 1.5rem;
+  width: calc(33.33333% - 3rem);
   z-index: 1;
   min-width: 0;
   position: relative;
   display: flex;
   flex-direction: column;
+
+  @include mx.media(mobile) {
+    width: calc(80% - 1rem);
+  }
 }
 
 .game a:hover {
@@ -49,6 +70,14 @@ picture {
   transition: .3s;
   display: flex;
   position: relative;
+
+  picture {
+    overflow: hidden;
+
+    img {
+      width: 100%;
+    }
+  }
 }
 
 .discount {
