--- a/my-app/src/sections/hero/hero.scss
+++ b/my-app/src/sections/hero/hero.scss
@@ -39,6 +39,11 @@ picture {
   flex-wrap: wrap;
   box-sizing: border-box;
 
+  @include mx.media(tablet) {
+    margin: 0;
+    padding: -1.5rem;
+  }
+
   @include mx.media(mobile) {
     flex-direction: column;
     align-items: center;
