--- a/my-app/src/styles/mixins.scss
+++ b/my-app/src/styles/mixins.scss
@@ -1,10 +1,10 @@
 @mixin media($size) {
   @if $size == mobile {
     @media (max-width: 480px) { @content; }
-  } @else if $size == mobile-up {
-    @media (min-width: 481px) { @content; }
+  } @else if $size == tablet {
+    @media (max-width: 768px) { @content; }
   } @else if $size == tablet-up {
-    @media (min-width: 768px) { @content; }
+    @media (min-width: 769px) { @content; }
   } @else if $size == laptop-up {
     @media (min-width: 1024px) { @content; }
   } @else if $size == desktop-up {
