--- a/my-app/src/sections/header/header.scss
+++ b/my-app/src/sections/header/header.scss
@@ -11,7 +11,11 @@
   color: #fff;
   padding: 2rem;
 
-  @include mx.media(mobile) {
+  @include mx.media(laptop) {
+    padding: 7rem 2rem 2rem 2rem;
+  }
+
+  @include mx.media(tablet) {
     padding: 5rem 2rem 2rem 2rem;
   }
 }
@@ -22,13 +26,19 @@
   left: 0;
   padding: 1rem;
 
-  @include mx.media(mobile) {
+  @include mx.media(laptop) {
     top: 0;
     margin: auto;
     left: 50%;
     padding: 1rem 0;
     transform: translateX(-50%);
 
+    h1 {
+      font-size: var(--font-size-2xl);
+    }
+  }
+
+  @include mx.media(tablet) {
     h1 {
       font-size: var(--font-size-xl);
     }
@@ -43,6 +53,10 @@ h1 {
   display: flex;
   flex-direction: row;
   gap: 4rem;
+
+  @include mx.media(tablet) {
+    gap: 3rem;
+  }
 
   @include mx.media(mobile) {
     gap: 2rem;
@@ -70,7 +84,7 @@ h1 {
   width: 20px;
   height: auto;
 
-  @include mx.media(mobile) {
+  @include mx.media(tablet) {
     display: none;
   }
 }
