--- a/my-app/src/sections/hero/hero.scss
+++ b/my-app/src/sections/hero/hero.scss
@@ -32,23 +32,17 @@ picture {
 }
 
 .games-container {
-  margin: -1.5rem;
+  margin: 0;
+  padding: -1.5rem;
   display: flex;
   position: relative;
   justify-content: center;
   flex-wrap: wrap;
   box-sizing: border-box;
 
-  @include mx.media(tablet) {
-    margin: 0;
-    padding: -1.5rem;
-  }
-
   @include mx.media(mobile) {
     flex-direction: column;
     align-items: center;
-    margin: 0;
-    padding: -1.5rem;
   }
 }
 
@@ -60,6 +54,10 @@ picture {
   position: relative;
   display: flex;
   flex-direction: column;
+
+  @include mx.media(tablet) {
+    width: calc(40% - 2.5rem);
+  }
 
   @include mx.media(mobile) {
     width: calc(80% - 1rem);
