--- a/my-app/src/sections/hero/hero.scss
+++ b/my-app/src/sections/hero/hero.scss
@@ -1,105 +1,153 @@
 @use "src/styles/mixins" as mx;
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 
-body {
-  color: #fff;
+.highlights-wrapper {
+  padding: 15px;
+  background-position: 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: rgb(46, 43, 43);
+  display: flex;
+  justify-content: center;
+  overflow: hidden;
+  height: 250px;
+  max-height: none;
+  min-height: 0;
+  position: relative;
+  margin-bottom: 10px;
+
+  @include mx.media(tablet-up) {
+    height: 350px;
+    padding: 20px;
+    max-height: none;
+    min-height: 0;
+  }
+
+  @include mx.media(laptop-up) {
+    height: 400px;
+    min-height: 500px;
+    max-height: 620px;
+    padding: 30px;
+  }
+
+  @include mx.media(desktop-up) {
+    height: 60vh;
+    min-height: 550px;
+  }
 }
 
-picture {
-  border-radius: 15px;
-  overflow: hidden;
+.highlights-wrapper:after {
+  content: "";
+  clip-path: polygon(50% 100%, 100% 0%, 100% 100%, 0% 100%, 0% 0%);
+  background: rgb(46, 43, 43);
+  height: 100px;
+  min-width: 1700px;
+  width: 100%;
   position: absolute;
+  bottom: -1px;
+  z-index: 1;
+
+  @include mx.media(desktop-up) {
+    bottom: -1px;
+    height: 120px;
+  }
+}
+
+.header-top-gradient {
+  background: linear-gradient(#000, transparent);
+  opacity: .6;
   top: 0;
   width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.section-wrapper {
-  max-width: 120rem;
-  width: 100%;
-  margin: 5rem 0;
-  display: flex;
-  flex-direction: column;
-  align-self: center;
-
-  @include mx.media(mobile) {
-    margin: 2rem 0;
-
-    h2 {
-      text-align: center;
-    }
-  }
-}
-
-.games-container {
-  margin: 0;
-  padding: -1.5rem;
-  display: flex;
-  position: relative;
-  justify-content: center;
-  flex-wrap: wrap;
-  box-sizing: border-box;
-
-  @include mx.media(mobile) {
-    flex-direction: column;
-    align-items: center;
-  }
-}
-
-.game {
-  margin: 1.5rem;
-  width: calc(33.33333% - 3rem);
+  height: 11rem;
   z-index: 1;
-  min-width: 0;
-  position: relative;
+  content: "";
+  position: absolute;
+}
+
+.parallax {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+}
+
+.parallax img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
+.parallax-link {
+  position: absolute;
+  top: 55px;
+  left: 0;
+  right: 0;
+  bottom: 3rem;
+  z-index: 1;
+
+  @include mx.media(laptop-up) {
+    top: 22%;
+  }
+}
+
+.content {
+  max-width: 120rem;
+  align-self: center;
+  width: 100%;
+  z-index: 1;
   display: flex;
   flex-direction: column;
-
-  @include mx.media(tablet) {
-    width: calc(40% - 2.5rem);
-  }
-
-  @include mx.media(mobile) {
-    width: calc(80% - 1rem);
-  }
+  align-items: flex-start;
 }
 
-.game a:hover {
-  transform: scale(1.05);
-}
-
-.game-cover {
-  padding-top: 57.4%;
-  transition: .3s;
-  display: flex;
-  position: relative;
-
-  picture {
-    overflow: hidden;
-
-    img {
-      width: 100%;
-    }
-  }
-}
-
-.discount {
+.banner-title {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  font-size: 1.5rem;
   font-weight: 700;
-  background-color: rgb(175, 19, 19);
-  position: absolute;
-  border-radius: 8px 8px 0;
-  padding: 6px 6px 5px 7px;
-  z-index: 2;
-  border: -0.2rem;
-  left: -0.3rem;
-  bottom: -0.2rem;
-  transition: 2s;
+  margin-bottom: 1rem;
+  max-width: 33.33333%;
+
+  @include mx.media(laptop-up) {
+    font-size: 2.7rem;
+  }
 }
 
-.discount::after {
+.banner-numbers {
+  display: flex;
+  align-items: center;
+  border-top: 0;
+  padding-top: 0;
+}
+
+.discount-parallax {
+  position: relative;
+  margin-right: 2rem;
+  font-weight: 700;
+  font-size: 1.3rem;
+  background-color: rgb(175, 19, 19);
+  color: #fff;
+  padding: 0.9rem 0.6rem 0.9rem 0.7rem;
+  border-radius: 0.8rem 0.8rem 0;
+  z-index: 2;
+  font-family: 'Lato', sans-serif;
+
+  @include mx.media(laptop-up) {
+    margin-right: 3rem;
+    font-size: 1.5rem;
+  }
+}
+
+.discount-parallax:after {
   transform: skewX(16deg);
   width: 100%;
-  border-radius: 10px 5px;
+  border-radius: 0.7rem 0.4rem;
   content: "";
   position: absolute;
   background-color: rgb(175, 19, 19);
@@ -107,44 +155,16 @@ picture {
   bottom: 0;
   right: -0.4rem;
   z-index: -1;
+
+  @include mx.media(laptop-up) {
+    border-radius: 1rem 0.5rem;
+  }
 }
 
-.game-img {
-  position: absolute;
-}
+.price-parallax {
+  font-size: 1.9rem;
 
-.information {
-  margin-top: 1rem;
-  display: flex;
-  flex-direction: row;
-  position: relative;
-  z-index: 1;
-  min-height: 2.6rem;
-  height: 100%;
-}
-
-.text {
-  display: inline-flex;
-  min-width: 0;
-  flex-direction: column;
-  margin-top: 0.4rem;
-}
-
-.name {
-  font-size: 1.5rem;
-  margin-right: 1rem;
-  display: inline-flex;
-  align-items: center;
-  min-width: 0;
-}
-
-.title {
-  text-overflow: ellipsis;
-  overflow: hidden;
-  white-space: nowrap;
-}
-
-.price {
-  margin-left: auto;
-  font-size: 2.3rem;
+  @include mx.media(laptop-up) {
+    font-size: 4rem;
+  }
 }
