--- a/my-app/src/styles/mixins.scss
+++ b/my-app/src/styles/mixins.scss
@@ -2,11 +2,15 @@
   @if $size == mobile {
     @media (max-width: 480px) { @content; }
   } @else if $size == tablet {
-    @media (max-width: 768px) { @content; }
+    @media (max-width: 767px) { @content; }
   } @else if $size == tablet-up {
-    @media (min-width: 769px) { @content; }
+    @media (min-width: 768px) { @content; }
   } @else if $size == laptop {
-    @media (max-width: 1024px) { @content; }
+    @media (max-width: 1023px) { @content; }
+  } @else if $size == laptop-up {
+    @media (min-width: 1024px) { @content; }
+  } @else if $size == desktop {
+    @media (max-width: 1200px) { @content; }
   } @else if $size == desktop-up {
     @media (min-width: 1200px) { @content; }
   } @else if $size == container-up {
