--- a/my-app/src/sections/trendyGames/trendyGames.scss
+++ b/my-app/src/sections/trendyGames/trendyGames.scss
@@ -30,32 +30,20 @@ body {
   width: 100%;
   max-width: 120rem;
   align-self: center;
-  margin-bottom: 3rem;
   padding: 0 2rem;
 
   h2 {
-    font-size: 2.7rem;
+    font-size: 1.7rem;
     font-weight: 700;
   }
 
-  @include mx.media(desktop) {
-    padding: 0 4rem;
-  }
-
-  @include mx.media(laptop) {
-    margin: 2rem 0;
-    gap: 2rem;
+  @include mx.media(desktop-up) {
+    margin-bottom: 3rem;
+    padding: 0 2rem;
 
     h2 {
-      font-size: 2.4rem;
-    }
-  }
-
-  @include mx.media(tablet) {
-    padding: 0 1rem;
-
-    h2 {
-      font-size: 2rem;
+      font-size: 2.7rem;
+      font-weight: 700;
     }
   }
 }
