--- a/my-app/src/sections/sliderReviews/sliderReviews.scss
+++ b/my-app/src/sections/sliderReviews/sliderReviews.scss
@@ -70,7 +70,7 @@
 }
 
 .border-animated-gradient {
-  background: #1D1F20;
+  background: rgb(22, 19, 19);
   position: relative;
   border-radius: 3px;
 }
@@ -168,7 +168,7 @@
 }
 
 .dislike {
-  background-color: rgba(175,19,19,.15);
+  background-color: rgba(186, 22, 22, 0.24);
 }
 
 .icon-like {
@@ -198,7 +198,7 @@
   -webkit-box-orient: vertical;
   line-height: 1.8rem;
   font-size: 1.1rem;
-  color: #fff;
+  color: #929292;
   box-sizing: border-box;
   height: 100%;
 
