--- a/my-app/src/sections/website-reviews/websiteReviews.scss
+++ b/my-app/src/sections/website-reviews/websiteReviews.scss
@@ -6,21 +6,42 @@
 
 }
 
-.container-websiteReviews {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
+.container-mobile-up-websiteReviews {
+  display: block;
+
+  @include mx.media(tablet-up) {
+    display: none;
+  }
+}
+
+.container-tablet-up-websiteReviews {
+  display: none;
+
+  @include mx.media(tablet-up) {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
 }
 
 .item-websiteReviews {
   display: flex;
   flex-direction: column;
   padding: 2rem;
-  margin: 1.5rem;
   background-color: rgb(22, 19, 19);
-  width: calc(100% - 3rem);
+  width: 100%;
   min-height: 100%;
   border-radius: 1.5rem;
+
+  @include mx.media(tablet-up) {
+    width: calc(100% - 1rem);
+    margin: .5rem;
+  }
+
+  @include mx.media(laptop-up) {
+    width: calc(100% - 3rem);
+    margin: 1.5rem;
+  }
 }
 
 .user-websiteReviews {
@@ -65,10 +86,16 @@
 }
 
 .readable-websiteReviews {
+  font-size: 1.3rem;
+  margin: 1.5rem 0;
+  line-height: 2rem;
+  color: #929292;
+
+  @include mx.media(laptop-up) {
     font-size: 1.5rem;
     margin: 1.5rem 0;
     line-height: 2rem;
-    color: #929292
+  }
 }
 
 .time-posted-websiteReviews {
