--- a/my-app/src/sections/website-reviews/websiteReviews.scss
+++ b/my-app/src/sections/website-reviews/websiteReviews.scss
@@ -21,8 +21,21 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    max-width: 192rem;
+    margin: 0 auto;
   }
 }
+
+.container-tablet-up-websiteReviews div:nth-of-type(3) {
+  @include mx.media(tablet-up) {
+    display: none;
+  }
+
+  @include mx.media(laptop-up) {
+    display: flex;
+  }
+}
+
 
 .item-websiteReviews {
   display: flex;
@@ -83,6 +96,7 @@
   -webkit-box-orient: vertical;
   font-size: 1.5rem;
   margin-top: 1rem;
+  overflow: hidden;
 }
 
 .readable-websiteReviews {
