--- a/my-app/src/styles/variables.scss
+++ b/my-app/src/styles/variables.scss
@@ -1,10 +1,14 @@
 :root {
-  --basic: #f8f8f8;
-  --white: #ffffff;
+  --basic: #0c2701;
+  --white: #ebebeb;
+  --greish-white: #e0e0e0;
   --black: #000000;
-  --primary: #00acac; 
-  --secondary: #ed403c; 
-  --accent:#EA3546; 
+  --primary: #163880;
+  --light-primary: #1f44d2;
+  --dark-primary: #000e2c; 
+  --secondary: #a35c0f; 
+  --accent:#eaca0d; 
+  --light-accent:#ffd901;
   --grey:#8D8D8D;
   --lightGrey:#D9D9D9;
 
