--- a/my-app/src/sections/footer/footer.scss
+++ b/my-app/src/sections/footer/footer.scss
@@ -6,8 +6,8 @@
   flex-direction: column;
   align-self: center;
   width: 100%;
-  background-color: black;
-  color: #fff;
+  background-color: var(--dark-primary);
+  color: var(--white);
   padding: 1rem 0 2rem 0;
 
   @include mx.media(tablet) {
@@ -61,8 +61,9 @@
 
 .logo-br {
   font-size: 3.5rem;
-  color: #fff;
+  color: var(--white);
   text-decoration: none;
+  text-shadow: 2px 1px var(--black);
 }
 
 .list-wrapper {
@@ -90,6 +91,7 @@
   padding: 1rem 1rem 1rem 0rem;
   display: flex;
   align-items: center;
+  text-shadow: 2px 1px var(--black);
 
   @include mx.media(laptop) {
     padding: .5rem;
@@ -265,6 +267,7 @@
   padding: 3rem 0 0 4rem;
   font-size: 3rem;
   font-family: 'Sawarabi Mincho', serif;
+  text-shadow: 2px 1px var(--black);
 
   @include mx.media(laptop) {
     padding: 3rem 0 0 3rem;
@@ -304,6 +307,7 @@
   display: flex;
   align-items: center;
   cursor: pointer;
+  text-shadow: 2px 1px var(--black);
 }
 
 .location-icon {
