--- a/my-app/src/sections/hero/hero.scss
+++ b/my-app/src/sections/hero/hero.scss
@@ -6,7 +6,7 @@
   background-position: 50%;
   background-repeat: no-repeat;
   background-size: cover;
-  background-color: rgb(46, 43, 43);
+  background-color: var(--basic);
   display: flex;
   justify-content: center;
   overflow: hidden;
@@ -39,7 +39,7 @@
 .highlights-wrapper:after {
   content: "";
   clip-path: polygon(50% 100%, 100% 0%, 100% 100%, 0% 100%, 0% 0%);
-  background: rgb(46, 43, 43);
+  background: var(--basic);
   height: 100px;
   min-width: 1700px;
   width: 100%;
@@ -111,6 +111,8 @@
   -webkit-box-orient: vertical;
   font-size: 1.5rem;
   font-weight: 700;
+  color: var(--accent);
+  text-shadow: 2px 1px var(--light-primary);
   margin-bottom: 1rem;
   max-width: 33.33333%;
 
@@ -131,7 +133,7 @@
   margin-right: 2rem;
   font-weight: 700;
   font-size: 1.3rem;
-  background-color: rgb(175, 19, 19);
+  background-color: var(--primary);
   color: #fff;
   padding: 0.9rem 0.6rem 0.9rem 0.7rem;
   border-radius: 0.8rem 0.8rem 0;
@@ -150,7 +152,7 @@
   border-radius: 0.7rem 0.4rem;
   content: "";
   position: absolute;
-  background-color: rgb(175, 19, 19);
+  background-color: var(--primary);
   top: 0;
   bottom: 0;
   right: -0.4rem;
@@ -163,6 +165,7 @@
 
 .price-parallax {
   font-size: 1.9rem;
+  text-shadow: 1px 1px var(--dark-primary);
 
   @include mx.media(laptop-up) {
     font-size: 4rem;
