--- a/my-app/src/sections/partner/partner.scss
+++ b/my-app/src/sections/partner/partner.scss
@@ -2,6 +2,8 @@
 
 strong {
   font-weight: 700;
+  color: var(--accent);
+  text-shadow: 2px 1px var(--light-primary);
 }
 
 .section-partner {
@@ -9,7 +11,9 @@ strong {
   width: 100%;
   margin-bottom: 1rem;
   padding: 0 2rem;
-  background-color: black;
+  background-color: var(--white);
+  border-bottom: .7rem solid var(--accent);
+  border-top: .7rem solid var(--accent);
   position: relative;
   z-index: 1;
   display: flex;
@@ -63,6 +67,7 @@ strong {
   display: flex;
   flex-direction: column;
   align-items: center;
+  color: var(--primary);
 
   a {
     text-decoration: none;
@@ -136,10 +141,12 @@ strong {
 
 .partner-button {
   border-radius: .8rem;
+  border: 3px solid var(--accent);
   font-weight: 700;
   font-size: 1.2rem;
-  background-color: rgb(175, 19, 19);
-  color: #fff;
+  background-color: var(--primary);
+  color: var(--white);
+  text-shadow: 2px 1px var(--black);
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -147,7 +154,6 @@ strong {
   box-sizing: border-box;
   padding: 0 1.5rem;
   transition: .2s;
-  border: 0;
   cursor: pointer;
   text-align: center;
   white-space: normal;
