--- a/my-app/src/sections/website-reviews/websiteReviews.scss
+++ b/my-app/src/sections/website-reviews/websiteReviews.scss
@@ -41,10 +41,12 @@
   display: flex;
   flex-direction: column;
   padding: 2rem;
-  background-color: rgb(22, 19, 19);
+  background-color: var(--white);
   width: 100%;
   min-height: 100%;
   border-radius: 1.5rem;
+  border: 1px solid var(--light-primary);
+  position: relative;
 
   @include mx.media(tablet-up) {
     width: calc(100% - 1rem);
@@ -57,6 +59,21 @@
   }
 }
 
+.item-websiteReviews::after {
+  border-radius: 1.3rem;
+  position: absolute;
+  display: block;
+  content: '';
+  border: 3px solid var(--accent);
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+}
+
 .user-websiteReviews {
   display: flex;
   flex-direction: row;
@@ -67,6 +84,7 @@
   height: 5rem;
   flex: 0 0 5rem;
   border-radius: 30%;
+  border: 2px solid var(--black);
 }
 
 .review-summary-websiteReviews {
@@ -79,8 +97,11 @@
   flex-direction: row;
   align-items: center;
   gap: .5rem;
+
   span {
     font-size: 1.5rem;
+    color: var(--accent);
+    text-shadow: 1px 0.5px var(--light-primary);
   }
 }
 
@@ -97,13 +118,14 @@
   font-size: 1.5rem;
   margin-top: 1rem;
   overflow: hidden;
+  color: var(--primary);
 }
 
 .readable-websiteReviews {
   font-size: 1.3rem;
   margin: 1.5rem 0;
   line-height: 2rem;
-  color: #929292;
+  color: var(--grey);
 
   @include mx.media(laptop-up) {
     font-size: 1.5rem;
@@ -118,4 +140,5 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  color: var(--primary);
 }
