--- a/my-app/src/sections/header/header.scss
+++ b/my-app/src/sections/header/header.scss
@@ -1,139 +1,172 @@
 @use "src/styles/mixins" as mx;
 
-.header-wrapper {
+.header-container {
+  width: 100%;
+  padding: 0 3rem;
   display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 8rem;
+  position: fixed;
+  top: 0;
+  z-index: 2;
+  background-color: transparent;
+  transition: .2s;
+  margin-bottom: -7.3rem;
+
+  .menu {
+    width: 60rem;
+    display: flex;
+    align-items: center;
+    position: absolute;
+    transform: translate(-50%);
+    left: 50%;
+    top: 0;
+    flex-direction: column;
+    transition: .2s;
+    transition-timing-function: cubic-bezier(0,0,0,1);
+    z-index: 1;
+  }
+}
+
+.trendings {
+  display: flex;
+  position: relative;
   align-items: center;
   justify-content: center;
-  position: relative;
-  height: 8rem;
-  width: 100%;
-  background-color: var(--dark-primary);
-  color: #fff;
-  padding: 2rem;
+  transition: .2s;
+  height: 4.4rem;
 
-  @include mx.media(laptop) {
-    padding: 7rem 2rem 2rem 2rem;
-  }
-
-  @include mx.media(tablet) {
-    padding: 5rem 2rem 2rem 2rem;
-  }
-}
-
-.title-wrapper {
-  position: absolute;
-  top: 0;
-  left: 0;
-  padding: 1rem;
-
-  @include mx.media(laptop) {
-    top: 0;
-    margin: auto;
-    left: 50%;
-    padding: 1rem 0;
-    transform: translateX(-50%);
-
-    h1 {
-      font-size: var(--font-size-2xl);
-      text-shadow: 2px 1px var(--black);
-    }
-  }
-
-  @include mx.media(tablet) {
-    h1 {
-      font-size: var(--font-size-xl);
-    }
-  }
-}
-
-h1 {
-  font-size: var(--font-size-3xl);
-}
-
-.menu {
-  display: flex;
-  flex-direction: row;
-  gap: 4rem;
-
-  @include mx.media(tablet) {
-    gap: 3rem;
-  }
-
-  @include mx.media(mobile) {
-    gap: 2rem;
-  }
-}
-
-.menu-items {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  gap: 3rem;
-
-  @include mx.media(mobile) {
-    gap: 2rem;
-  }
-}
-
-.link {
-  display: flex;
-  flex-direction: row;
-  gap: 1rem;
-}
-
-.icon {
-  width: 20px;
-  height: auto;
-
-  @include mx.media(tablet) {
-    display: none;
-  }
-}
-
-#uparrow:before {
-  content: '\276F';
-}
-
-#downarrow:before {
-  content: '\276E';
-}
-
-#uparrow, #downarrow {
-  font-size: 1.5rem;
-  align-self: flex-start;
-  color: #fff;
-  display: inline-block;
-  -ms-transform: rotate(90deg);
-  -webkit-transform: rotate(90deg);
-  transform: rotate(90deg);
-}
-
-.search-input {
-  font-size: 1.7rem;
-  color: transparent;
-  border-radius: 8rem;
-  height: 100%;
-  height: 3.3rem;
-  width: 3.3rem;
-  background-color: #fff;
-  background-image: url('./graphics/png/search.png');
-  background-repeat: no-repeat;
-  background-size: 1.6rem;
-  background-position: 50%;
-  outline: none;
-
-  @include mx.media(mobile) {
-    font-size: 1rem;
-  }
-}
-
-.text {
-  color: var(--white);
-  text-shadow: 2px 1px var(--black);
-
-  @include mx.media(mobile) {
+  .links-nav-menu {
     font-size: 1.5rem;
+    color: var(--white);
+    font-weight: 400;
+    margin: 0 1.5rem;
+    white-space: nowrap;
+    opacity: .8;
+  }
+  
+  .header-container .menu .trendings .links-nav-menu:first-of-type {
+    margin-left: 0;
+  }
+
+  .header-container .menu .trendings .links-nav-menu:last-of-type {
+    margin-right: 0;
+}
+}
+
+.product-menu {
+  display: flex;
+  position: relative;
+  transition: .2s;
+  width: 100%;
+  height: 6.6rem;
+}
+
+.glossy {
+  backdrop-filter: blur(60px) saturate(100%);
+  -webkit-backdrop-filter: blur(60px) saturate(100%);
+  background-color: transparent;
+  border-radius: 3.5rem;
+  position: absolute;
+  opacity: 1;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  transition: .2s;
+}
+
+.header-container .menu .product-menu .links-nav-menu {
+  display: flex;
+  padding-left: 2rem;
+  transition: .2s;
+  z-index: 1;
+  width: 100%;
+
+  .nav {
+    display: flex;
+    flex-direction: column;
+    position: static;
+    transition: width .2s;
+
+    .access {
+      display: flex;
+      align-items: center;
+      color: #fff;
+      padding: 2.4rem 1.5rem;
+    }
+
+    .icon-xs {
+      margin-right: 1rem;
+    }
+
+    .title {
+      margin-right: 1rem;
+    }
+
+    .icon-arrow {
+      transform: rotate(90deg);
+      opacity: .4;
+    }
   }
 }
+
+.icon-xs {
+  width: 2rem;
+  height: 2rem;
+  flex: 0 0 2rem;
+}
+
+.icon-platform {
+  mask-repeat: no-repeat;
+  -webkit-mask-repeat: no-repeat;
+  mask-size: contain;
+  -webkit-mask-size: contain;
+  mask-position: center;
+  -webkit-mask-position: center;
+  background-color: var(--white);
+}
+
+.icon-pc {
+  mask-image: url(./src/icon-pc.png);
+  -webkit-mask-image: url(./src/icon-pc.png);
+}
+
+.icon-playstation {
+  mask-image: url(./src/icon-ps.png);
+  -webkit-mask-image: url(./src/icon-ps.png);
+}
+
+.icon-xbox {
+  mask-image: url(./src/icon-xbox.png);
+  -webkit-mask-image: url(./src/icon-xbox.png);
+}
+
+.icon-nintendo {
+  mask-image: url(./src/icon-nin.png);
+  -webkit-mask-image: url(./src/icon-nin.png);
+}
+
+.icon-arrow {
+  mask-image: url(./src/arrow.png);
+  -webkit-mask-image: url(./src/arrow.png);
+  mask-repeat: no-repeat;
+  -webkit-mask-repeat: no-repeat;
+  mask-size: contain;
+  -webkit-mask-size: contain;
+  mask-position: center;
+  -webkit-mask-position: center;
+  background-color: #fff;
+}
+
+.icon-xxxs {
+  width: 1.5rem;
+  height: 1.5rem;
+  flex: 0 0 1.5rem;
+}
+
+
+
 
  
