--- a/my-app/src/sections/header/header.scss
+++ b/my-app/src/sections/header/header.scss
@@ -29,6 +29,43 @@
   }
 }
 
+body.scrolled .header-container {
+  background-color: var(--dark-primary);
+  z-index: 21;
+
+  .menu {
+    top: -2.9rem;
+    width: 45rem;
+
+    .trendings {
+      opacity: 0;
+      visibility: hidden;
+      transition: 0s;
+    }
+
+    .product-menu {
+      height: 5rem;
+
+      .glossy {
+        opacity: 0;
+        visibility: hidden;
+      }
+
+      .links-nav-menu {
+        padding: 0 5.3rem 0 0;
+
+        .nav .access {
+          padding: 1.6rem 1.5rem 3.3rem;
+
+          .icon-xs {
+            display: none;
+          }
+        }
+      }
+    }
+  }
+}
+
 .trendings {
   display: flex;
   position: relative;
