--- a/my-app/src/sections/header/header.scss
+++ b/my-app/src/sections/header/header.scss
@@ -21,6 +21,10 @@
     background-color: transparent;
   }
 
+  .logo-ig {
+    z-index: 2;
+  }
+
   .menu {
     width: 100%;
     display: flex;
@@ -38,6 +42,13 @@
       width: 61rem;
     }
   }
+}
+
+.logo-ig {
+  background-image: url(./src/logo3.png);
+  background-size: 100%;
+  width: 22.5rem;
+  height: 6rem;
 }
 
 body.scrolled .header-container {
@@ -139,6 +150,10 @@ body.scrolled .header-container {
       font-size: 1.5rem;
     }
   }
+
+  .links-nav-menu:hover {
+    opacity: 1;
+  }
   
   .header-container .menu .trendings .links-nav-menu:first-of-type {
     margin-left: 0;
@@ -217,6 +232,10 @@ body.scrolled .header-container {
         @include mx.media(laptop-up) {
           padding: 2.4rem 1.5rem;
         }
+      }
+
+      .access:hover .icon-arrow {
+        opacity: 1;
       }
 
       .icon-xs {
@@ -324,6 +343,10 @@ body.scrolled .header-container {
         @include mx.media(laptop-up) {
           width: 6.6rem;
         }
+      }
+
+      .icon-search-input:hover {
+        transform: scale(1.2);
       }
     }
   }
