--- a/my-app/src/sections/header/header.scss
+++ b/my-app/src/sections/header/header.scss
@@ -12,7 +12,7 @@
   transition: .2s;
   background-color: var(--dark-primary);
   height: 5.5rem;
-  margin-bottom: 0;
+  margin-bottom: -73px;
 
   @include mx.media(laptop-up) {
     padding: 0 3rem;
@@ -42,13 +42,108 @@
       width: 61rem;
     }
   }
+
+  .header-right {
+    display: flex;
+    transition: .2s;
+    opacity: 1;
+    visibility: visible;
+    z-index: 2;
+
+    .cart-container {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: relative;
+      height: 5rem;
+      border-radius: 100%;
+      transition: .2s;
+      top: 0;
+      margin-right: 1rem;
+
+      .icon-cart {
+        position: relative;
+        transition: .2s;
+
+        @include mx.media(laptop-up) {
+          left: -0.2rem;
+        }
+      }
+    }
+
+    .login-container-header {
+      font-weight: 700;
+      display: flex;
+      align-items: center;
+      transition: .2s;
+      opacity: 1;
+      visibility: visible;
+      margin-right: auto;
+
+      .user-header {
+        transition: .2s;
+        cursor: pointer;
+        height: 5rem;
+        z-index: 1;
+        display: flex;
+        align-items: center;
+        position: relative;
+
+        .user-icon-header {
+          margin-left: 1rem;
+          transition: .2s;
+          }
+        }
+      }
+  }
+}
+
+.icon-cart {
+  mask-image: url(./src/shoping-cart.png);
+  -webkit-mask-image: url(./src/shoping-cart.png);
+  mask-repeat: no-repeat;
+  -webkit-mask-repeat: no-repeat;
+  mask-size: contain;
+  -webkit-mask-size: contain;
+  mask-position: center;
+  -webkit-mask-position: center;
+  background-color: #fff;
+}
+
+.user-icon-header {
+  mask-image: url(./src/icon-user.png);
+  -webkit-mask-image: url(./src/icon-user.png);
+  mask-repeat: no-repeat;
+  -webkit-mask-repeat: no-repeat;
+  mask-size: contain;
+  -webkit-mask-size: contain;
+  mask-position: center;
+  -webkit-mask-position: center;
+  background-color: #fff;
+}
+
+.icon-small {
+  width: 3rem;
+  height: 3rem;
+  flex: 0 0 3rem;
+
+  @include mx.media(laptop-up) {
+    width: 4rem;
+    height: 4rem;
+    flex: 0 0 4rem;
+  }
 }
 
 .logo-ig {
   background-image: url(./src/logo3.png);
   background-size: 100%;
-  width: 22.5rem;
-  height: 6rem;
+  width: 11.25rem;
+  height: 3rem;
+
+  @include mx.media(laptop-up) {
+    width: 22.5rem;
+    height: 6rem;
+  }
 }
 
 body.scrolled .header-container {
