--- a/my-app/src/sections/hero/hero.scss
+++ b/my-app/src/sections/hero/hero.scss
@@ -15,6 +15,7 @@
   min-height: 0;
   position: relative;
   margin-bottom: 10px;
+  margin-top: 5.5rem;
 
   @include mx.media(tablet-up) {
     height: 350px;
@@ -28,6 +29,7 @@
     min-height: 500px;
     max-height: 620px;
     padding: 30px;
+    margin-top: 0;
   }
 
   @include mx.media(desktop-up) {
