Adding gradient to few sections.

--- a/my-app/src/sections/partner/partner.scss
+++ b/my-app/src/sections/partner/partner.scss
@@ -144,7 +144,7 @@ strong {
   border: 3px solid var(--accent);
   font-weight: 700;
   font-size: 1.2rem;
-  background-color: var(--primary);
+  background: var(--gradient-primary);
   color: var(--white);
   text-shadow: 2px 1px var(--black);
   display: inline-flex;
