--- a/my-app/src/styles/variables.scss
+++ b/my-app/src/styles/variables.scss
@@ -6,6 +6,7 @@
   --primary: #163880;
   --light-primary: #1f44d2;
   --dark-primary: #000e2c; 
+  --gradient-primary: linear-gradient(8deg, rgba(31, 68, 210, 1) 26%, rgba(22, 56, 128, 1) 71%);
   --secondary: #a35c0f; 
   --accent:#eaca0d; 
   --light-accent:#ffd901;
