--- a/my-app/src/sections/header/header.scss
+++ b/my-app/src/sections/header/header.scss
@@ -413,7 +413,7 @@ body.scrolled .header-container {
         font-size: 1.3rem;
         color: transparent;
         border-radius: 8rem;
-        background: var(--primary);
+        background: var(--gradient-primary);
         background-repeat: no-repeat;
         background-position: 50%;
         padding: 0;
