--- a/my-app/src/sections/trendyGames/trendyGames.scss
+++ b/my-app/src/sections/trendyGames/trendyGames.scss
@@ -54,7 +54,7 @@ body {
   font-size: 1.5rem;
   height: 4rem;
   padding: 0 1.5rem;
-  background-color: var(--primary);
+  background: var(--gradient-primary);
   border-radius: 3.5rem;
   z-index: 1;
   white-space: nowrap;
