--- a/my-app/src/sections/trustPanel/trustPanel.scss
+++ b/my-app/src/sections/trustPanel/trustPanel.scss
@@ -41,7 +41,7 @@ p {
   mask-repeat: no-repeat;
   mask-size: contain;
   mask-position: center;
-  background-color: var(--primary);
+  background: var(--gradient-primary);
 
   @include mx.media(laptop-up) {
     width: 5rem;
