--- a/my-app/src/styles/mixins.scss
+++ b/my-app/src/styles/mixins.scss
@@ -1,7 +1,9 @@
 @mixin media($size) {
   @if $size == mobile {
     @media (max-width: 480px) { @content; }
-  } @else if $size == tablet {
+  } @else if $size == mobile-up {
+    @media (min-width: 480px) { @content; }
+  }  @else if $size == tablet {
     @media (max-width: 767px) { @content; }
   } @else if $size == tablet-up {
     @media (min-width: 768px) { @content; }
