--- a/my-app/src/sections/GamesItemsPageSections/gamesPanel/gamesPanel.scss
+++ b/my-app/src/sections/GamesItemsPageSections/gamesPanel/gamesPanel.scss
@@ -10,23 +10,36 @@
     display: flex;
     align-items: flex-start;
     height: 100%;
+    flex-direction: column;
+
+    @include mx.media(laptop-up) {
+      flex-direction: row;
+    }
 
     .game-graphic-presentation {
-      height: 35.3rem;
       display: flex;
       flex-direction: column;
-      flex: 0 0 61.6rem;
       position: relative;
+      padding-top: 45%;
+
+      @include mx.media(mobile-up) {
+        flex: 0 0 61.6rem;
+        height: 35.3rem;
+        padding-top: 0;
+      }
 
       .banner {
         display: flex;
         justify-content: center;
 
         .banner-graphic {
-          border-radius: 1.5rem;
           width: 100%;
           object-fit: cover;
           max-width: 61.6rem;
+
+          @include mx.media(mobile-up) {
+            border-radius: 1.5rem;
+          }
         }
       }
     }
@@ -35,8 +48,7 @@
       border-radius: 1.5rem;
       backdrop-filter: blur(60px) saturate(100%);
       -webkit-backdrop-filter: blur(60px) saturate(100%);
-      padding: 2rem 2rem 0;
-      margin-left: 6rem;
+      padding: 0 1rem;
       width: 100%;
       z-index: 1;
       height: 100%;
@@ -47,6 +59,11 @@
       background-image: linear-gradient(1turn,var(--basic),rgba(12, 39, 1, 0) 70%);
       background-color: transparent;
 
+      @include mx.media(mobile-up) {
+        margin-left: 6rem;
+        padding: 2rem 2rem 0;
+      }
+
       .item-name {
         display: flex;
         flex-direction: column;
@@ -55,23 +72,39 @@
         margin: .5rem 3rem;
 
         h1 {
-          font-size: 1.9rem;
-          line-height: 2.5rem;
+          font-size: 1.5rem;
+          line-height: 2rem;
           text-align: center;
+          font-weight: bold;
           font-family: 'Lato', sans-serif;
+
+          @include mx.media(mobile-up) {
+            font-size: 1.9rem;
+            line-height: 2.5rem;
+          }
         }
       }
 
       .item-subinfo {
         font-size: 1.3rem;
-        background-color: rgba(12, 39, 1, .3);
-        padding: .7rem 2rem;
+        background-color: var(--basic-dark);
+        padding: .7rem 3rem;
         display: flex;
         align-items: center;
         justify-content: center;
-        border-radius: 10rem;
+        border-radius: .7rem;
         margin: 1rem;
         min-height: 5rem;
+        box-shadow: inset 0 0 0 1px hsl(0deg 0% 100% / 15%);
+        width: calc(100% - 2rem);
+
+        @include mx.media(mobile-up) {
+          background-color: rgba(12, 39, 1, .3);
+          border-radius: 10rem;
+          box-shadow: none;
+          padding: .7rem 2rem;
+          width: auto;
+        }
 
         .platform {
           margin-left: -1.2rem;
@@ -86,9 +119,9 @@
             padding: .5rem;
 
             .icon-s {
-              width: 3rem;
-              height: 3rem;
-              flex: 0 0 3rem;
+              width: 2rem;
+              height: 2rem;
+              flex: 0 0 2rem;
               mask-repeat: no-repeat;
               -webkit-mask-repeat: no-repeat;
               mask-size: contain;
@@ -96,6 +129,12 @@
               mask-position: center;
               -webkit-mask-position: center;
               background-color: #fff;
+
+              @include mx.media(mobile-up) {
+                width: 3rem;
+                height: 3rem;
+                flex: 0 0 3rem;
+              }
             }
 
             .icon-switch {
@@ -111,9 +150,9 @@
             padding: .5rem;
 
             .icon-s {
-              width: 3rem;
-              height: 3rem;
-              flex: 0 0 3rem;
+              width: 2rem;
+              height: 2rem;
+              flex: 0 0 2rem;
               mask-repeat: no-repeat;
               -webkit-mask-repeat: no-repeat;
               mask-size: contain;
@@ -121,6 +160,12 @@
               mask-position: center;
               -webkit-mask-position: center;
               background-color: #fff;
+
+              @include mx.media(mobile-up) {
+                width: 3rem;
+                height: 3rem;
+                flex: 0 0 3rem;
+              }
             }
 
             .icon-ps {
@@ -135,16 +180,22 @@
             border-radius: 100%;
 
             .icon-s {
-              width: 3.5rem;
-              height: 3.5rem;
-              flex: 0 0 3.5rem;
+              width: 2rem;
+              height: 2rem;
+              flex: 0 0 2rem;
               mask-repeat: no-repeat;
               -webkit-mask-repeat: no-repeat;
               mask-size: contain;
               -webkit-mask-size: contain;
               mask-position: center;
               -webkit-mask-position: center;
-              background-color: #000000;
+              background-color: #fff;
+
+              @include mx.media(mobile-up) {
+                width: 3rem;
+                height: 3rem;
+                flex: 0 0 3rem;
+              }
             }
 
             .icon-xbox {
@@ -159,16 +210,22 @@
             border-radius: 100%;
 
             .icon-s {
-              width: 3.5rem;
-              height: 3.5rem;
-              flex: 0 0 3.5rem;
+              width: 2rem;
+              height: 2rem;
+              flex: 0 0 2rem;
               mask-repeat: no-repeat;
               -webkit-mask-repeat: no-repeat;
               mask-size: contain;
               -webkit-mask-size: contain;
               mask-position: center;
               -webkit-mask-position: center;
-              background-color: #14487b;
+              background-color: #fff;
+
+              @include mx.media(mobile-up) {
+                width: 3rem;
+                height: 3rem;
+                flex: 0 0 3rem;
+              }
             }
 
             .icon-pc {
@@ -181,11 +238,23 @@
         .avaible {
           display: flex;
           align-items: center;
+
+          .spacer {
+            display: none;
+
+            @include mx.media(mobile-up) {
+              display: block;
+            }
+          }
         }
 
         .download {
-          display: flex;
           align-items: center;
+          display: none;
+
+          @include mx.media(mobile-up) {
+            display: flex;
+          }
         }
       }
 
@@ -193,6 +262,13 @@
         display: flex;
         align-items: flex-end;
         margin: .5rem 1rem;
+        font-size: 1.5rem;
+        font-weight: normal;
+
+        @include mx.media(mobile-up) {
+          font-size: 1.8rem;
+          font-weight: bold;
+        }
 
         .fire {
           display: flex;
@@ -217,7 +293,11 @@
         margin-top: auto;
         display: flex;
         align-items: baseline;
-        margin: auto 1rem 1rem 1rem;
+        margin: .5rem 0;
+
+        @include mx.media(mobile-up) {
+          margin: auto 1rem 1rem 1rem;
+        }
 
         .discounts {
           display: flex;
@@ -251,19 +331,27 @@
         }
 
         .discounted {
-          font-size: 1.9rem;
+          font-size: 2.1rem;
           margin-left: 1rem;
           color: var(--accent);
+
+          @include mx.media(mobile-up) {
+            font-size: 1.9rem;
+          }
         }
 
         .total {
           padding-top: 1rem;
-          font-size: 4rem;
+          font-size: 2.3rem;
           display: flex;
           justify-content: flex-end;
           margin-left: 1rem;
           line-height: 3rem;
           align-items: baseline;
+
+          @include mx.media(mobile-up) {
+            font-size: 4rem;
+          }
         }
       }
 
@@ -276,13 +364,13 @@
         .button {
           border-radius: .8rem;
           font-weight: 700;
-          font-size: 1.7rem;
+          font-size: 1.5rem;
           background: var(--gradient-primary);
           color: #fff;
           display: inline-flex;
           align-items: center;
           justify-content: center;
-          height: 5.6rem;
+          height: 5.2rem;
           box-sizing: border-box;
           padding: 0 3rem;
           border: 0;
@@ -291,6 +379,11 @@
           white-space: normal;
           -webkit-appearance: none;
           transition: background-color .2s;
+
+          @include mx.media(mobile-up) {
+            font-size: 1.7rem;
+            height: 5.6rem;
+          }
         }
 
         .button-addToCart {
@@ -327,7 +420,10 @@
 
     .game-panel-item.wide {
       min-height: 100%;
-      height: 35.3rem
+
+      @include mx.media(mobile-up) {
+        height: 35.3rem
+      }
     }
   }
 
@@ -336,8 +432,38 @@
   }
 }
 
+  .game-graphic-presentation:after {
+    content: "";
+    clip-path: polygon(0 100%,100% 100%,0 0);
+    background: var(--basic);
+    height: 60px;
+    min-width: 1700px;
+    width: 100%;
+    position: absolute;
+    bottom: -1px;
+    z-index: 1;
+    min-width: 100%;
+    height: 6%;
+
+    @include mx.media(mobile-up) {
+      display: none;
+    }
+  }
+
 .seperator {
-  height: 6rem;
+  height: 3rem;
+
+  @include mx.media(mobile-up) {
+    height: 4rem;
+  }
+
+  @include mx.media(tablet-up) {
+    height: 5rem;
+  }
+
+  @include mx.media(laptop-up) {
+    height: 6rem;
+  }
 }
 
 .spacer {
