--- a/my-app/src/sections/GamesItemsPageSections/gamesVisuals/gamesVisuals.scss
+++ b/my-app/src/sections/GamesItemsPageSections/gamesVisuals/gamesVisuals.scss
@@ -1,14 +1,32 @@
 @use "src/styles/mixins" as mx;
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 
-.headline {
+.headlineGamesItemsPage {
   padding: 0;
+  margin-bottom: 1.5rem;
+
+  .headline-visuals {
+    margin-left: 1.5rem;
+
+    @include mx.media(mobile-up) {
+      margin-left: 0;
+    }
+  }
+
+  @include mx.media(mobile-up) {
+    margin-left: 0;
+    margin-bottom: 3rem;
+  }
 }
 
 .vimeo {
   padding-bottom: 56.25%;
   position: relative;
-  margin-bottom: 3rem;
+  margin-bottom: 1.5rem;
+
+  @include mx.media(mobile-up) {
+    margin-bottom: 3rem;
+  }
 }
 
 .vimeo iframe {
@@ -16,14 +34,25 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
+  right: 0;
+  margin: auto;
+  width: calc(100% - 3rem);
   height: 100%;
+
+  @include mx.media(mobile-up) {
+    width: 100%;
+    margin: 0;
+  }
 }
 
 .gallery-wrapper {
-  margin: -1.5rem;
-  display: flex;
   justify-content: center;
+  display: none;
+
+  @include mx.media(mobile-up) {
+    margin: -1.5rem;
+    display: flex;
+  }
 
 
   .highlight-img {
@@ -77,18 +106,100 @@
 .description {
   position: relative;
   width: 100%;
-
-  .headline {
-    font-size: 2.7rem;
-    font-weight: 700;
-    color: var(--accent);
-    text-shadow: 1px 1px var(--light-primary);
-    margin-bottom: 2rem;
-  }
+  padding: 0 1.5rem;
 
   .text {
-    line-height: 2.3rem;
-    font-size: 1.5rem;
+    line-height: 1.8rem;
+    font-size: 1.3rem;
     color: var(--grey);
+
+    @include mx.media(mobile-up) {
+      font-size: 1.5rem;
+      line-height: 2.3rem;
+    }
   }
 }
+
+.headlineGamesItemsPage {
+  font-weight: 700;
+  color: var(--accent);
+  text-shadow: 1px 1px var(--light-primary);
+  font-size: 1.7rem;
+  margin-bottom: 1.5rem;
+
+  @include mx.media(mobile-up) {
+    margin-bottom: 2rem;
+    font-size: 2.7rem;
+  }
+}
+
+.splide-wrapper-gamesItemsPage {
+  width: 100vw;
+
+  @include mx.media(mobile-up) {
+    display: none;
+  }
+}
+
+.splide-screenshot-wrapper {
+  margin: 1.5rem;
+  width: calc(33.33333% - 3rem);
+  z-index: 1;
+  min-width: 0;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+
+  @include mx.media(laptop) {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    width: auto;
+    display: block;
+  }
+}
+
+.splide-screenshot-wrapper a:hover {
+  transform: scale(1.05);
+}
+
+.splide-screenshot-cover {
+  padding-top: 57.4%;
+  transition: .3s;
+  display: flex;
+  position: relative;
+  text-decoration: none;
+  color: #fff;
+
+  picture {
+    overflow: hidden;
+    border-radius: 15px;
+    border: 1px solid var(--light-primary);
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  picture::after {
+    border-radius: 13px;
+    position: absolute;
+    display: block;
+    content: '';
+    border: 3px solid var(--accent);
+    height: 100%;
+    width: 100%;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+  }
+
+    img {
+      width: 100%;
+    }
+  }
+
+  .splide-screenshot-img {
+    position: absolute;
+  }
