--- a/my-app/src/wrappers/contentGamesItemsPage.scss
+++ b/my-app/src/wrappers/contentGamesItemsPage.scss
@@ -6,8 +6,18 @@
   z-index: 1;
   display: flex;
   flex-direction: column;
-  top: -23rem;
-  margin-bottom: -23rem;
+  top: -8.2rem;
+  margin-bottom: -8.2rem;
   position: relative;
   width: auto;
+
+  @include mx.media('mobile-up') {
+    top: -16rem;
+    margin-bottom: -16rem;
+  }
+
+  @include mx.media('laptop-up') {
+    top: -23rem;
+    margin-bottom: -23rem;
+  }
 }
